# PPSE_Board_Code

./: .gitignore  Readme.md  TODO.txt
Code/: FSMtypes.h  accelerometer.c  buzzer.c  datatypes.h  gps.c  led.c  main.c  note.txt  temperature.c  temperature.h
Code/cdc_msc/: main.c  msc_disk.c
DEMO_project/: CMakeLists.txt  code.c
Documents/: void.c
Final project 1.0/: CMakeLists.txt  FSMtypes.h  Screen.cpp  accelerometer.c  accelerometer.h  buzzer.c  buzzer.h  datatypes.h  gps.c  gps.h  gps_types.h  led.c  led.h  main.c  note.txt  screen.c  screen.h  temperature.c  temperature.h
Final project 1.0/cdc_msc/: CMakeLists.txt  Data.h  main.c
Final project 1.0/testScreen/: main.cpp
PCB/PSE_RP2040/: PSE_RP2040.kicad_pcb  PSE_RP2040.kicad_prl  PSE_RP2040.kicad_pro  PSE_RP2040.kicad_sch  PSE_RP2040.net  fp-info-cache
USB_device/: CMakeLists.txt  dev_lowlevel.c
cdc_msc/: CMakeLists.txt
mma8451_i2c/: CMakeLists.txt  mma8451_i2c.c
testScreen/: CMakeLists.txt  main.cpp
testUSB/: CMakeLists.txt
testadc/hello_adc/: CMakeLists.txt  hello_adc.c
testbutton+interrupt/: CMakeLists.txt  hello_gpio_irq.c
testbuzzer/: CMakeLists.txt  buzzer.c  buzzer.h  hello_pwm.c  main.c
testbuzzer 2/: CMakeLists.txt  pwm_led_fade.c
testi2c/: CMakeLists.txt  bus_scan.c
tinyusb-master/examples/device/cdc_msc/: CMakeLists.txt
tinyusb-master/examples/device/cdc_msc/src/: main.c  msc_disk.c
ublox-SAM-M8Q/: CMakeLists.txt  GPS.c  gps.h  misc.c
usb_files/: USBdata.h  main.c  msc_disk.c
ws2812/: CMakeLists.txt  ws2812.c
